# MdxHub

./: .env  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json
.github/: FUNDING.yml
.github/workflows/: nextjs.yml
crates/app_tracing/: Cargo.toml
crates/app_tracing/src/: lib.rs
crates/app_tracing_macro/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs  user.rs
crates/clock/: Cargo.toml
crates/clock/src/: lib.rs
crates/collections/: Cargo.toml
crates/collections/src/: collections.rs
crates/evk-doc/: Cargo.toml
crates/evk-doc/src/: actions.rs  app.rs  assets.rs  constants.rs  file_ops.rs  keybinds.rs  main.rs  theme.rs  tree.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/fuzzy/: Cargo.toml
crates/fuzzy/src/: lib.rs
crates/gpui_util/: Cargo.toml
crates/gpui_util/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: geometry.rs  gui.rs  platform.rs  style.rs  text_system.rs  window.rs
crates/gui/src/elements/: anchored.rs  mod.rs  text.rs
crates/gui/src/patch/: bounds.rs
crates/gui/src/pick/: bounds.rs
crates/gui/src/text_system/: line_wrapper.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: async_body.rs  lib.rs
crates/icons/: Cargo.toml
crates/language/: Cargo.toml
crates/language/src/: buffer.rs  lib.rs  syntax_map.rs  toolchain.rs
crates/language_core/: Cargo.toml
crates/language_core/src/: grammar.rs  language_config.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
crates/platform_title_bar/: Cargo.toml
crates/platform_title_bar/src/: lib.rs  platform_title_bar.rs  system_window_tabs.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  search.rs  trusted_worktrees.rs
crates/refineable/: Cargo.toml
crates/refineable/derive_refineable/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs  remote_client.rs
crates/remote/src/transport/: ssh.rs
crates/rope/: Cargo.toml
crates/rope/src/: chunk.rs  lib.rs  offset_utf16.rs  point.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  message_stream.rs  peer.rs  proto_client.rs
crates/settings/: Cargo.toml
crates/settings/src/: editorconfig_store.rs  settings.rs  settings_file.rs  settings_store.rs
crates/settings_content/: Cargo.toml
crates/settings_content/src/: agent.rs  editor.rs  language.rs  merge_from.rs  project.rs  settings_content.rs  title_bar.rs  workspace.rs
crates/settings_json/: Cargo.toml
crates/settings_json/src/: settings_json.rs
crates/settings_macros/: Cargo.toml
crates/settings_macros/src/: settings_macros.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: cursor.rs  lib.rs  tree_map.rs
crates/task/: Cargo.toml
crates/task/src/: task.rs
crates/text/: Cargo.toml
crates/text/src/: anchor.rs  lib.rs  locator.rs  operation_queue.rs  patch.rs  subscription.rs  undo_map.rs
crates/theme/: Cargo.toml
crates/theme/src/: default_colors.rs  lib.rs  scale.rs  schema.rs  styles.rs  theme.rs
crates/theme/src/styles/: accents.rs  colors.rs  players.rs  status.rs  syntax.rs  system.rs
crates/theme_settings/: Cargo.toml
crates/theme_settings/src/: theme_settings.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: application_menu.rs  lib.rs  title_bar.rs  title_bar_settings.rs
crates/ui/: Cargo.toml
crates/ui/src/: component_prelude.rs  components.rs  prelude.rs  styles.rs  traits.rs  ui.rs  utils.rs
crates/ui/src/components/: context_menu.rs  indicator.rs  keybinding.rs  popover_menu.rs
crates/ui/src/components/button/: button.rs  button_like.rs  icon_button.rs  mod.rs
crates/ui/src/components/icon/: mod.rs
crates/ui/src/components/label/: label.rs  label_like.rs  mod.rs
crates/ui/src/styles/: animation.rs  color.rs  elevation.rs  mod.rs  typography.rs
crates/ui/src/traits/: animation_ext.rs  styled_ext.rs
crates/ui/src/utils/: constants.rs
crates/ui_macros/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: paths.rs  rel_path.rs  util.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: item.rs  lib.rs  multi_workspace.rs  pane.rs  pane_group.rs  searchable.rs  toolbar.rs  workspace_settings.rs
crates/worktree/: Cargo.toml
crates/worktree/src/: ignore.rs  lib.rs  worktree_settings.rs
public/: site.webmanifest
public/data/en/: nav.json
public/data/en/docs/: index.json
public/data/zh/: nav.json
public/data/zh/docs/: about.json  alg.json  dev.json  html.json  i18.json  i18n.json  index.json  learn.json  linux.json  next.json  paper.json  ts.json
public/test/: h.html
scripts/: build-mdx.ts  rss.mjs  watch-mdx.ts
src/: mdx-components.tsx
src/app/: Main.tsx  layout.tsx  page.tsx  robots.ts  seo.tsx  sitemap.ts
src/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
src/app/[locale]/[...not found]/: page.tsx  page_.tsx
src/app/[locale]/about/: page.tsx
src/app/[locale]/demo/: data.tsx
src/app/[locale]/docs/: page.tsx
src/app/_comp/: Started.tsx
src/app/blog/: page.tsx
src/app/docs/: page.tsx
src/app/i18n/: LanguageChanger.tsx  i18n.ts
src/app/tags/: page.tsx
src/components/: Comments.tsx  Footer.tsx  LayoutWrapper.tsx  MDXComponents.tsx  MobileNav.tsx  ScrollTopAndComment.tsx  SearchButton.tsx  icons.tsx
src/components/common/: ModeToggle.tsx  mode-toggle.tsx  search-form.tsx  search.tsx
src/components/md/: mdx.tsx  mdxComponents.tsx
src/components/providers/: index.tsx  theme-providers.tsx
src/components/ui/: command.tsx  dialog.tsx  select.tsx  sidebar.tsx
src/config/: site.ts
src/css/: color.css  index.css  tailwind.css
src/css/md/: base.css  code.css
src/data/: headerNavLinks.ts  siteMetadata.js  url.ts
src/hooks/: use-mobile.tsx
src/layouts/: AuthorLayout.tsx  ListLayout.tsx  ListLayoutWithTags.tsx  PostBanner.tsx  PostLayout.tsx  PostSimple.tsx
src/lib/: path.ts
src/lib/md/: get.ts  mdx-to-json.ts  old.ts
src/types/: commont.ts  docs.ts
tests/: aa.ts
tests/scripts/: watch.ts
themes/aa/: aa.json
(+154 files in other folders)
