[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
platform_title_bar = { path = "crates/platform_title_bar" }
ui = { path = "crates/ui" }
settings_content = { path = "crates/settings_content" }
settings_macros = { path = "crates/settings_macros" }
settings = { path = "crates/settings" }
settings_json = { path = "crates/settings_json" }
gui = { path = "crates/gui" }
util = { path = "crates/util" }
collections = { path = "crates/collections" }
gpui_util = { path = "crates/gpui_util" }
fs = { path = "crates/fs" }
text = { path = "crates/text" }
rope = { path = "crates/rope" }
sum_tree = { path = "crates/sum_tree" }
app_tracing_macro = { path = "crates/app_tracing_macro" }
app_tracing = { path = "crates/app_tracing" }
project = { path = "crates/project" }
workspace = { path = "crates/workspace" }
title_bar = { path = "crates/title_bar" }
theme = { path = "crates/theme" }
refineable = { path = "crates/refineable" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
ui_macros = { path = "crates/ui_macros" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
