[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
platform_title_bar = { path = "crates/platform_title_bar" }
ui = { path = "crates/ui" }
settings_content = { path = "crates/settings_content" }
settings_macros = { path = "crates/settings_macros" }
settings = { path = "crates/settings" }
settings_json = { path = "crates/settings_json" }
gui = { path = "crates/gui" }
util = { path = "crates/util" }
collections = { path = "crates/collections" }
gpui_util = { path = "crates/gpui_util" }
fs = { path = "crates/fs" }
text = { path = "crates/text" }
rope = { path = "crates/rope" }
sum_tree = { path = "crates/sum_tree" }
app_tracing_macro = { path = "crates/app_tracing_macro" }
app_tracing = { path = "crates/app_tracing" }
project = { path = "crates/project" }
workspace = { path = "crates/workspace" }
title_bar = { path = "crates/title_bar" }
theme = { path = "crates/theme" }
refineable = { path = "crates/refineable" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
ui_macros = { path = "crates/ui_macros" }
icons = { path = "crates/icons" }
language = { path = "crates/language" }
clock = { path = "crates/clock" }
remote = { path = "crates/remote" }
rpc = { path = "crates/rpc" }
client = { path = "crates/client" }
fuzzy = { path = "crates/fuzzy" }
worktree = { path = "crates/worktree" }
lsp = { path = "crates/lsp" }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "f4dfa89a21ca35cd929b70354b1583fabae325f8" }
parking_lot = "0.12"
gpui = "0.2"
gpui-component = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
anyhow = "1"
derive_more = { version = "2.1.1", features = ["full"] }
schemars = { version = "1", features = ["derive"] }
http = "1.1"
http-body = "1.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
url = "2.2"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
