[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
platform_title_bar = { path = "crates/platform_title_bar" }
ui = { path = "crates/ui" }
settings_content = { path = "crates/settings_content" }
settings_macros = { path = "crates/settings_macros" }
settings = { path = "crates/settings" }
settings_json = { path = "crates/settings_json" }
gui = { path = "crates/gui" }
util = { path = "crates/util" }
collections = { path = "crates/collections" }
gpui_util = { path = "crates/gpui_util" }
fs = { path = "crates/fs" }
text = { path = "crates/text" }
rope = { path = "crates/rope" }
sum_tree = { path = "crates/sum_tree" }
app_tracing_macro = { path = "crates/app_tracing_macro" }
app_tracing = { path = "crates/app_tracing" }
project = { path = "crates/project" }
workspace = { path = "crates/workspace" }
title_bar = { path = "crates/title_bar" }
theme = { path = "crates/theme" }
refineable = { path = "crates/refineable" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
ui_macros = { path = "crates/ui_macros" }
icons = { path = "crates/icons" }
language = { path = "crates/language" }
clock = { path = "crates/clock" }
remote = { path = "crates/remote" }
rpc = { path = "crates/rpc" }
client = { path = "crates/client" }
fuzzy = { path = "crates/fuzzy" }
worktree = { path = "crates/worktree" }
lsp = { path = "crates/lsp" }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "f4dfa89a21ca35cd929b70354b1583fabae325f8" }
parking_lot = "0.12"
gpui = "0.2"
gpui-component = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
anyhow = "1"
derive_more = { version = "2.1.1", features = ["full"] }
schemars = { version = "1", features = ["derive"] }
http = "1.1"
http-body = "1.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
url = "2.2"
serde_urlencoded = "0.7"
bytes = "1.0"
http_client = { path = "crates/http_client" }
postage = "0.5"
any_vec = "0.14"
aho-corasick = "1.1"
fancy-regex = "0.17.0"
rand = "0.9"
smallvec = { version = "1.10", features = ["const_new"] }
regex = "1.12"
toml = "0.8"
language_core = { path = "crates/language_core" }
tree-sitter = { version = "0.25", features = ["wasm"] }
tree-sitter-json = "0.24"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" } # https://github.com/tree-sitter/tree-sitter-typescript/pull/347
tree-sitter-yaml = { git = "https://github.com/zed-industries/tree-sitter-yaml", rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a" }
tree-sitter-html = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-css = "0.23"
tree-sitter-elixir = "0.3"
heapless = "0.9"
streaming-iterator = "0.1.9"
unicase = "2.8.1"
globset = "0.4"
pretty_assertions = "1.4"
semver = { version = "1.0", features = ["serde"] }
async-trait = "0.1.89"
which = "6.0.0"
shellexpand = "3.1"
shlex = "1.3.0"
hex = "0.4.3"
sha2 = "0.10"
task = { path = "crates/task" }
[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
