[package]
name = "client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]

[dependencies]
clock.workspace = true
rpc.workspace = true
http_client.workspace = true
gpui.workspace = true
futures.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
postage.workspace = true
