[package]
name = "fs"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
gpui = "0.2.2"
async-trait = "0.1.89"
anyhow = "1.0"
futures = "0.3"
async-tar = "0.5"
text.workspace = true
rope.workspace = true
serde = { version = "1.0", features = ["derive"] }
