[package]
name = "gui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "gui"
path = "src/gui.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5" }
anyhow = "1.0"
smallvec = "1.10"
derive_more = { version = "2.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
refineable.workspace = true
itertools = "0.14"
gpui_util = "0.2.2"
collections.workspace = true
schemars = { version = "1", features = ["derive"] }
serde_json = "1.0"
taffy = "0.10"
uuid = "1.18"
