[package]
name = "language"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]


[dependencies]
util.workspace = true
gpui.workspace = true
settings.workspace = true
fs.workspace = true
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
lsp.workspace = true
clock.workspace = true
text.workspace = true
language_core.workspace = true
