[package]
name = "language"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]


[dependencies]
util.workspace = true
gpui.workspace = true
settings.workspace = true
fs.workspace = true
anyhow.workspace = true
serde.workspace = true
lsp.workspace = true
clock.workspace = true
text.workspace = true
language_core.workspace = true
futures.workspace = true
collections.workspace = true
# ui.workspace = true
tree-sitter.workspace = true
sum_tree.workspace = true
streaming-iterator.workspace = true
globset.workspace = true
parking_lot.workspace = true
postage.workspace = true
smallvec.workspace = true
theme.workspace = true
semver.workspace = true
unicase.workspace = true
serde_json.workspace = true
async-trait.workspace = true
regex.workspace = true
