[package]
name = "language_core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
anyhow.workspace = true
collections.workspace = true
log.workspace = true
lsp.workspace = true
parking_lot.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
util.workspace = true
gpui.workspace = true
tree-sitter.workspace = true
[features]
