[package]
name = "platform_title_bar"
version = "0.1.0"
edition.workspace = true
[lib]
path = "src/platform_title_bar.rs"
doctest = false

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5" }
gui.workspace = true
workspace.workspace = true
settings.workspace = true
smallvec = "1.10"
ui.workspace = true
