[package]
name = "project"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[features]

[dependencies]
gpui = "0.2"
collections.workspace = true
language.workspace = true
clock.workspace = true
remote.workspace = true
client.workspace = true
settings_macros.workspace = true
settings.workspace = true
worktree.workspace = true
util.workspace = true
anyhow = "1"
