[package]
name = "refineable"
version = "0.1.0"
edition.workspace = true
publish = false
description = "A macro for creating 'refinement' types that can be used to partially initialize or mutate a complex struct"

[lints]
workspace = true

[lib]
path = "src/refineable.rs"
doctest = false

[dependencies]
derive_refineable.workspace = true
