[package]
name = "remote"
description = "Client-side subsystem for remote editing"
edition.workspace = true
version = "0.1.0"
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]


[dependencies]
parking_lot = "0.12"
futures = "0.3"
collections.workspace = true
rpc.workspace = true
gpui = "0.2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
settings_content.workspace = true
util.workspace = true
