[package]
description = "Shared logic for communication"
edition.workspace = true
name = "rpc"
version = "0.1.0"
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]

[dependencies]
parking_lot.workspace = true
collections.workspace = true
gpui.workspace = true
serde.workspace = true
futures.workspace = true
