[package]
name = "settings"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[lib]
path = "src/settings.rs"
doctest = false

[dependencies]
gpui = "0.2"
settings_content.workspace = true
settings_macros.workspace = true
futures = "0.3"
anyhow = "1.0"
util.workspace = true
collections.workspace = true
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.10"
ec4rs = "1.2.0"
fs.workspace = true
