[package]
name = "settings_content"
version = "0.1.0"
edition = "2024"

[lib]
name = "settings_content"
path = "src/settings_content.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
settings_macros.workspace = true
gpui = "0.2"
gui.workspace = true
collections.workspace = true
strum = { version = "0.27", features = ["derive"] }
anyhow = "1.0"
serde_json_lenient = "0.1"
util.workspace = true
settings_json.workspace = true
log = "0.4"
derive_more = "2.1"
