[package]
name = "settings_json"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/settings_json.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_lenient = "0.2"
serde_path_to_error = "0.1"
tree-sitter.workspace = true
tree-sitter-json = "0.23"
util.workspace = true
