[package]
name = "settings_macros"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/settings_macros.rs"
proc-macro = true

[lints]
workspace = true

[features]
default = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
