[package]
name = "text"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true


[dependencies]
anyhow.workspace = true
clock.workspace = true
collections.workspace = true
log.workspace = true
parking_lot.workspace = true
postage.workspace = true
rand = { workspace = true, optional = true }
regex.workspace = true
rope.workspace = true
smallvec.workspace = true
sum_tree.workspace = true
util.workspace = true

[dev-dependencies]
