[package]
name = "title-bar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "title_bar"
path = "src/title_bar.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5" }
platform_title_bar.workspace = true
ui.workspace = true
settings_content.workspace = true
settings_macros.workspace = true
settings.workspace = true
gui.workspace = true
