[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
gpui = "0.2"
gpui-component = { version = "0.5" }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
collections.workspace = true
smallvec = "1.10"
gui.workspace = true
