[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
gpui = "0.2"
gpui-component = { version = "0.5" }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
collections.workspace = true
smallvec = "1.10"
gui.workspace = true
theme.workspace = true
gpui-macros = "0.2.2"
ui_macros.workspace = true
itertools = "0.14"
icons.workspace = true
