[package]
name = "util"
version = "0.1.0"
edition.workspace = true
publish = false


[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/util.rs"
doctest = true

[dependencies]
serde.workspace = true
anyhow = "1.0"
gpui_util.workspace = true
regex = "1.12"
globset.workspace = true
schemars.workspace = true
which.workspace = true
log.workspace = true
shlex.workspace = true
