[package]
name = "workspace"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]

[dependencies]
settings.workspace = true
gpui = "0.2"
project.workspace = true
ui.workspace = true
collections.workspace = true
schemars = "1"
serde = { version = "1", features = ["derive"] }
language.workspace = true
smallvec = "1"
anyhow = "1"
client.workspace = true
