[package]
name = "derive_refineable"
version = "0.1.0"
edition.workspace = true
publish = false
description = "A derive macro for creating refinement types in Rust"


[lints]
workspace = true

[lib]
path = "src/derive_refineable.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
